# Croissant

./: .gitignore  .gitmodules  BootstrapVcpkg.cmake  CMakeLists.txt  framework_source.cmake  vcpkg.json
shaders/: imgui_pixel.hlsl  imgui_vertex.hlsl  plot.py  shaders.hlsl  validation.py
shaders/TAA/: motion_vector_generator_cs.hlsl  taa_resolve_cs.hlsl
shaders/common/: blit_ps.hlsl  common_utils.hlsli  rect_vs.hlsl  taa_cb.h
source/core/: VFS.cpp  VFS.h  log.cpp  log.h  stdafx.h
source/engine/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  MeshOperations.cpp  MeshOperations.h  ModelLoader.cpp  ModelLoader.h
source/render/: Application.cpp  Application.h  imgui_nvrhi.cpp  imgui_nvrhi.h  imgui_renderer.cpp  imgui_renderer.h
source/render/backend/: DeviceManager.cpp  DeviceManager.h  ShaderUtils.h
source/render/backend/dx12/: CustomHLSLTypes.h  DXHelper.h  DeviceManager_DX12.cpp  DeviceManager_DX12.h  common_hlsl_defines.h  d3dx12.h
source/render/renderpasses/: CommonRenderPasses.cpp  CommonRenderPasses.h  PixelReadBackPass.cpp  PixelReadBackPass.h  TemporalAntiAliasing.cpp  TemporalAntiAliasing.h
source/utils/: ImageUtils.h  string_utils.cpp  string_utils.h
